crates/swc_ecma_parser/tests/test262-error-references/fail/7b0456581bef4cb1.js.stderr
error: LineBreak cannot follow 'throw'
 --> $DIR/tests/test262-parser/fail/7b0456581bef4cb1.js:1:1
  |
1 | throw
  | ^^^^^

